objects/hed__Behavior_Response__c.object
<CustomObject>
    <description>Stores information about the response to a behavior event.</description>
    <label>Behavior Response</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Behavior Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>hed__Type__c</fullName>
        <description>The response to the behavior event, for example, Academic Probation, Expulsion, or Other.</description>
        <inlineHelpText>The response to the behavior event, for example, Academic Probation, Expulsion, or Other.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Probation</fullName>
                </value>
                <value>
                    <fullName>Expulsion</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Status__c</fullName>
        <description>The status of the response taken.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <description>The recipient of this Behavior Response (read-only).</description>
        <formula>HYPERLINK(&quot;/&quot; + hed__Behavior_Involvement__r.hed__Contact__c, hed__Behavior_Involvement__r.hed__Contact__r.FirstName + &quot; &quot; + hed__Behavior_Involvement__r.hed__Contact__r.LastName)</formula>
        <inlineHelpText>The recipient of this Behavior Response (read-only).</inlineHelpText>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <description>The date the response is no longer in effect.</description>
        <inlineHelpText>The date the response is no longer in effect.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <description>The date the response goes into effect.</description>
        <inlineHelpText>The date the response goes into effect.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>A description of the response.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Behavior_Involvement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Behavior Involvement record this Behavior Response is for.</description>
        <inlineHelpText>The Behavior Involvement record this Behavior Response is for.</inlineHelpText>
        <label>Behavior Involvement</label>
        <referenceTo>hed__Behavior_Involvement__c</referenceTo>
        <relationshipLabel>Behavior Responses</relationshipLabel>
        <relationshipName>Behavior_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>